testdata/fixtures/audit/positive/sql_concat_fstring_py.py
def get_user(conn, user_id):
    cursor = conn.cursor()
    cursor.execute(f"SELECT * FROM users WHERE id = {user_id}")
    return cursor.fetchone()
