testdata/fixtures/audit/negative/sql_concat_neg_parameterized_py.py
def get_user(conn, user_id):
    cursor = conn.cursor()
    cursor.execute("SELECT * FROM users WHERE id = %s", (user_id,))
    return cursor.fetchone()
